[gd_scene load_steps=7 format=3 uid="uid://0k877ukwywbb"]

[ext_resource type="Texture2D" uid="uid://btjbcv6gs15p6" path="res://icon.svg" id="1_d00sr"]
[ext_resource type="Script" uid="uid://dcbpoa7i5nrw4" path="res://anchor_point/anchor_point.gd" id="1_wbj3q"]
[ext_resource type="Script" uid="uid://cu0ut4wslh0uu" path="res://anchor_point/rope_end_area_2d.gd" id="3_yp0rk"]

[sub_resource type="LabelSettings" id="LabelSettings_wbj3q"]
font_size = 24

[sub_resource type="CircleShape2D" id="CircleShape2D_wbj3q"]
radius = 48.6621

[sub_resource type="CircleShape2D" id="CircleShape2D_yp0rk"]

[node name="AnchorPoint" type="Area2D"]
script = ExtResource("1_wbj3q")

[node name="Highlight" type="Node2D" parent="."]

[node name="Outline2D" type="Line2D" parent="Highlight"]
position = Vector2(-1, -25)
scale = Vector2(0.1875, 0.37499997)
points = PackedVector2Array(-69.333336, -66.66667, 80.00001, -66.66667, 80.00001, 72.00001, -69.333336, 72.00001)
closed = true
width = 20.0

[node name="Label" type="Label" parent="Highlight"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -19.0
offset_top = -91.0
offset_right = 21.0
offset_bottom = -57.0
grow_horizontal = 2
text = "[F]"
label_settings = SubResource("LabelSettings_wbj3q")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0, 1, 0, 1)
position = Vector2(0, -24)
scale = Vector2(0.2, 0.4)
texture = ExtResource("1_d00sr")

[node name="InteractionCollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -40)
shape = SubResource("CircleShape2D_wbj3q")
debug_color = Color(0.64198023, 0.52430373, 1.92523e-07, 0.41960785)
metadata/_edit_lock_ = true

[node name="RopeLine2D" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 800, 0)
width = 8.0
default_color = Color(0, 0, 0, 1)

[node name="RopeEndRigidBody" type="RigidBody2D" parent="RopeLine2D"]
collision_layer = 32768
collision_mask = 32768
mass = 10.0
freeze = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RopeLine2D/RopeEndRigidBody"]
scale = Vector2(5.361, 5.361)
shape = SubResource("CircleShape2D_yp0rk")

[node name="RopeEndArea2D" type="Area2D" parent="RopeLine2D/RopeEndRigidBody"]
script = ExtResource("3_yp0rk")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="RopeLine2D/RopeEndRigidBody/RopeEndArea2D"]
scale = Vector2(5.361, 5.361)
shape = SubResource("CircleShape2D_yp0rk")

[node name="Highlight" type="Node2D" parent="RopeLine2D/RopeEndRigidBody/RopeEndArea2D"]

[node name="Line2D" type="Line2D" parent="RopeLine2D/RopeEndRigidBody/RopeEndArea2D/Highlight"]
points = PackedVector2Array(-11, 16, 13, 16, 13, 3, -11, 4)
closed = true

[node name="Label" type="Label" parent="RopeLine2D/RopeEndRigidBody/RopeEndArea2D/Highlight"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -19.0
offset_top = 17.0
offset_right = 21.0
offset_bottom = 51.0
grow_horizontal = 2
text = "[F]"
label_settings = SubResource("LabelSettings_wbj3q")
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="RopeLine2D/RopeEndRigidBody/RopeEndArea2D" to="." method="_on_rope_end_area_2d_body_entered"]
[connection signal="body_exited" from="RopeLine2D/RopeEndRigidBody/RopeEndArea2D" to="." method="_on_rope_end_area_2d_body_exited"]
